--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="../public/css/home.css">
 
     <title>Home</title>
 </head>
@@ -35,43 +35,45 @@
                 iusto.
                 Corporis.</p>
 
-            <h2>Trending</h2>
-            <ul class="movie_flex_list">
-                <% movies.forEach(function(movie){ %>
-                    <li class="card">
+            <% /* %>
+                <h2>Trending</h2>
+                <ul class="movie_flex_list">
+                    <% movies.forEach(function(movie){ %>
+                        <li class="card">
 
-                        <div>
-                            <a href="<%= %>">
-                                <%= movie.title %>
-                            </a>
-                            <p>
-                                <%= movie.desc %>
-                            </p>
-                        </div>
-                    </li>
+                            <div>
+                                <a href="<%= %>">
+                                    <%= movie.title %>
+                                </a>
+                                <p>
+                                    <%= movie.desc %>
+                                </p>
+                            </div>
+                        </li>
 
-                    <% }); %>
-            </ul>
+                        <% }); %>
+                </ul>
 
 
 
-            <h2>Lastest</h2>
-            <ul class="movie_flex_list">
-                <% movies.forEach(function(movie){ %>
-                    <li class="card">
+                <h2>Lastest</h2>
+                <ul class="movie_flex_list">
+                    <% movies.forEach(function(movie){ %>
+                        <li class="card">
 
-                        <div>
-                            <a  href="<%= %>">
-                                <%= movie.title %>
-                            </a>
-                            <p>
-                                <%= movie.desc %>
-                            </p>
-                        </div>
-                    </li>
+                            <div>
+                                <a href="<%= %>">
+                                    <%= movie.title %>
+                                </a>
+                                <p>
+                                    <%= movie.desc %>
+                                </p>
+                            </div>
+                        </li>
 
-                    <% }); %>
-            </ul>
+                        <% }); %>
+                </ul>
+                <% */ %>
         </section>
 </body>
 
