Implement integration for home screen

--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -35,27 +35,27 @@
                 iusto.
                 Corporis.</p>
 
+
+            <h2>Trending</h2>
+            <ul class="movie_flex_list">
+                <% trendingMovies.forEach(function(movie){ %>
+                    <li class="card">
+
+                        <div>
+                            <a href="<%= %>">
+                                <%= movie.title %>
+                            </a>
+                            <p>
+                                <%= movie.description %>
+                            </p>
+                        </div>
+                    </li>
+
+                    <% }); %>
+            </ul>
+
+
             <% /* %>
-                <h2>Trending</h2>
-                <ul class="movie_flex_list">
-                    <% movies.forEach(function(movie){ %>
-                        <li class="card">
-
-                            <div>
-                                <a href="<%= %>">
-                                    <%= movie.title %>
-                                </a>
-                                <p>
-                                    <%= movie.desc %>
-                                </p>
-                            </div>
-                        </li>
-
-                        <% }); %>
-                </ul>
-
-
-
                 <h2>Lastest</h2>
                 <ul class="movie_flex_list">
                     <% movies.forEach(function(movie){ %>
