trying render img

--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -42,7 +42,8 @@
                     <li class="card">
 
                         <div>
-                            <a href="<%= %>">
+                            <img src="data:image/jpg;base64, <%= item.image %>>">
+                            <a href="/<%= {item.id} %>">
                                 <%= item.title %>
                             </a>
                             <p>
@@ -57,6 +58,7 @@
 
             <h2>Lastest</h2>
             <ul class="movie_flex_list">
+                <img src="data:image/jpg;base64, <%= item.image %>>">
                 <% info.latest.forEach(function(item){ %>
                     <li class="card">
 
