Integrate movies screen and rename view controller methods

--- a/frontend/views/movies.ejs
+++ b/frontend/views/movies.ejs
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/movies.css">
 
-    <link rel="stylesheet" href="/css/movies.css">
-    <link rel="stylesheet" href="/css/style.css">
     <title>Movies</title>
 </head>
 
@@ -28,7 +28,7 @@
                                 <%= movie.title %>
                             </a>
                             <p>
-                                <%= movie.desc %>
+                                <%= movie.description %>
                             </p>
                         </div>
                     </li>
