added search btn

--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -43,7 +43,7 @@
 
                         <div>
                             <img src="data:image/jpg;base64, <%= item.image %>>">
-                            <a href="/<%= {item.id} %>">
+                            <a href="/<%= item.id %>">
                                 <%= item.title %>
                             </a>
                             <p>
