--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -14,6 +14,7 @@
         </div>
         <form class="search_field" action="/search" method="post">
             <input  type="text" placeholder="search...">
+            <button type="submit">&#128270;</button>
         </form>
         <a class="login_btn" href="/login">Login</a>
 
