Integrate login and backend

--- a/frontend/views/login.ejs
+++ b/frontend/views/login.ejs
@@ -16,16 +16,16 @@
         <div class="login">      
           
           <div id="login">
-            <form method="post" action=""> 
+            <form method="post" action="/user/login"> 
               <h1><center>Login</center></h1> <br>
               <p> 
-                <label for="email_login">Email</label><br>
-                <input id="email_login" name="email_login" required="required" type="text" placeholder/>
+                <label for="email">Email</label><br>
+                <input id="email" name="email" required="required" type="text" placeholder/>
               </p>
               <br>
               <p> 
-                <label for="senha_login">Password</label><br>
-                <input id="senha_login" name="senha_login" required="required" type="password" placeholder/> 
+                <label for="password">Password</label><br>
+                <input id="password" name="password" required="required" type="password" placeholder/> 
               </p>
                     <br>
               <p> 
