Revert "Update add review form"
This reverts commit 7cebd358f4315b0fba74565cfd97d6a274d83140.

--- a/frontend/views/item.ejs
+++ b/frontend/views/item.ejs
@@ -74,7 +74,7 @@
 
         <section class="add_review_area geral_section">
             <h3>Add a review</h3>
-            <form method="post" action="/add_comment">
+            <form method="post" action="/api/review">
                 <textarea name="new_review" id="">aaa</textarea>
                 <div>
                     <ul class="stars">
