Integrate createReview with hardcoded userId

--- a/frontend/views/item.ejs
+++ b/frontend/views/item.ejs
@@ -84,6 +84,7 @@
                 <input id="title" name="title" type="text" value="titulo" />
                 <input id="body" name="body" type="text" value="body"></textarea>
                 <input id="stars" name="stars" type="number" value="2">
+                <input id="id" name="item_id" type="hidden" value="<%= item.id %>">
                 <button form="review_form" class="add_button" type="submit">ADD</button>
             </form>
         </section>
