img tags added to the cards with converting structure

--- a/frontend/views/item.ejs
+++ b/frontend/views/item.ejs
@@ -100,7 +100,7 @@
             <ul class="movie_flex_list">
                 <% items.forEach(function(item){ %>
                     <li class="card">
-
+                        <img src="data:image/png;base64,<%- item.image  %>" alt="">
                         <div>
                             <h3>
                                 <%= item.title %>
