--- a/frontend/views/series.ejs
+++ b/frontend/views/series.ejs
@@ -22,6 +22,7 @@
             <ul class="movies">
                 <% series.forEach(function(serie){ %>
                     <li class="card">
+                        <img src="data:image/png;base64,<%- serie.image  %>" alt="">
 
                         <div>
                             <a href="<%= %>">
