--- a/frontend/views/books.ejs
+++ b/frontend/views/books.ejs
@@ -22,7 +22,7 @@
             <ul class="movies">
                 <% books.forEach(function(book){ %>
                     <li class="card">
-
+                        <img src="data:image/png;base64,<%- item.image  %>" alt="">
                         <div>
                             <a href="<%= %>">
                                 <%= book.title %>
