--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -61,7 +61,7 @@
 
                 <% info.latest.forEach(function(item){ %>
                     <li class="card">
-
+                        <img src="data:image/png;base64,<%- item.image  %>" alt="">
                         <div>
                             <a href="<%= %>">
                                 <%= item.title %>
