Fix json object access

--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -38,7 +38,7 @@
 
             <h2>Trending</h2>
             <ul class="movie_flex_list">
-                <% trending.forEach(function(item){ %>
+                <% info.trending.forEach(function(item){ %>
                     <a href="/<%= item.id %>">
                         <li class="card">
                             <div>
