--- a/frontend/views/item.ejs
+++ b/frontend/views/item.ejs
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/css/item.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/item.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <title>
         <%= item.title %>
@@ -18,7 +18,7 @@
     <%- include('navbar'); %>
 
         <section class="movie geral_section">
-            <img src="assets\item-image.png" alt="">
+            <img src="assets/item-image.png" alt="">
             <article>
                 <h2>
                     <%= item.title %>
