--- a/frontend/views/books.ejs
+++ b/frontend/views/books.ejs
@@ -23,7 +23,7 @@
                 <% books.forEach(function(book){ %>
                     <a href="<%= book.id %>">
                         <li class="card">
-                            <img src="data:image/png;base64,<%- item.image  %>" alt="">
+                            <img src="data:image/png;base64,<%- book.image  %>" alt="">
                             <div>
                                 <%= book.title %>
                                     <p>
