--- a/frontend/styles/ItemList.module.css
+++ b/frontend/styles/ItemList.module.css
@@ -4,4 +4,10 @@
     flex-wrap: wrap;
     gap: 20px;
     height: auto;
-  }
+}
+
+.sectionName {
+  align-self: flex-start;
+  padding-left: 4vw;
+  padding-top: 25px;
+}
