--- a/frontend/styles/ItemCard.module.css
+++ b/frontend/styles/ItemCard.module.css
@@ -1,6 +1,6 @@
 .item {
   width: 200px;
-  background-color: #fafafa;
+  background-color: #1B263B;
   border-radius: 15px;
   margin-top: 15px;
 }
@@ -14,10 +14,11 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   display: block;
+  color: #FFFFFF;
 }
 
 .itemName:hover {
-  color: #8546f0 !important;
+  color: #FFFFFF !important;
 }
 
 .itemImg {
@@ -28,11 +29,12 @@
 .itemType {
   font-size: 12px;
   opacity: 0.8;
+  color: #E0E1DD;
 }
 
 .itemDescription {
   display: block;
-  color: #2d2d2d;
+  color: #FFFFFF;
   font-size: 15px;
   max-width: 100ch;
   overflow: hidden;
@@ -48,7 +50,7 @@
 
 .itemInfo {
   padding: 0px 10px 10px 10px;
-  color:#2d2d2d;
+  color:#FFFFFF;
 }
 
 .containerImg {
