--- a/frontend/styles/Navbar.module.css
+++ b/frontend/styles/Navbar.module.css
@@ -14,6 +14,8 @@
   display:flex;
   justify-content:space-between;
   align-items:center;
+  background-color: #1B263B;
+  padding: 5px 25px;
 }
 .navbar .logo
 {
