Implement items screen and navigability through navbar

--- a/frontend/styles/ItemList.module.css
+++ b/frontend/styles/ItemList.module.css
@@ -1,5 +1,6 @@
 .containerListagem {
     display: flex;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
