--- a/frontend/styles/Review.module.css
+++ b/frontend/styles/Review.module.css
@@ -12,6 +12,10 @@
 	width: 100%;
 }
 
+.boxTop .column {
+    width: auto;
+}
+
 .testimonialHeading{
     letter-spacing: 1px;
     margin: 30px 0px;
